--- a/pages/add_address/add_address.wxml
+++ b/pages/add_address/add_address.wxml
@@ -1,21 +1,34 @@
 <form bindsubmit="formSubmit" bindreset="formReset">
- <view class="section">
-    <view class="section__title">姓名</view>
-    <input name="input" placeholder="真实姓名" />
-  </view>
-  <view class="section">
-    <view class="section__title">电话</view>
-    <input name="input" placeholder="手机号码" />
-  </view>
-  <view class="section">
-    <view class="section__title">地区信息</view>
-    <input name="input" placeholder="真实姓名" />
-  </view>
-  <view class="section">
-    <view class="section__title">详细地址</view>
-    <input name="input" placeholder="街道门牌、楼层房间号等信息" />
-  </view>
-  <view class="btn-area">
-    <button form-type="submit">Submit</button>
+<view  class='form_all'>
+        <view class='title'><text class='text_red'>*</text>收货人:</view>
+        <view class='list_a'>
+        <view class="section section_top">
+            <view class="section_title">姓名</view>
+            <input name="inputb" placeholder="真实姓名" />
+          </view>
+          <view class="section">
+            <view class="section_title">电话</view>
+            <input name="inputa" placeholder="手机号码" />
+          </view>
+          </view>
+          <view class='list_b'>
+          <view class='title'><text class='text_red'>*</text>收货地址:</view>
+          <view class="section section_top">
+            <view class="section_title">地区信息</view>
+            <!-- <input name="input" placeholder="选择  省/市/区" /> -->
+              <picker mode="region" bindchange="bindRegionChange" value="{{region}}" custom-item="{{customItem}}">
+                      <view class="picker">{{region[0]}}/{{region[1]}}/{{region[2]}}
+                      </view>
+                  </picker>
+          </view>
+          <view class="section">
+            <view class="section_title">详细地址</view>
+            <input name="input" placeholder="街道门牌、楼层房间号等信息" />
+          </view>
+          </view>
+      
+          <view class="btn-area">
+            <button form-type="submit" class='button-hovers'>保存并使用</button>
+          </view>
   </view>
 </form>
