--- a/pages/settlement/settlement.wxss
+++ b/pages/settlement/settlement.wxss
@@ -1,4 +1,132 @@
 /* pages/settlement/settlement.wxss */
+/* 弹窗 */
+.drawer_screen {
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 1000;
+  background: #000;
+  opacity: 0.5;
+  overflow: hidden;
+}
+ 
+/*content*/
+.drawer_box {
+  width: 650rpx;
+  overflow: hidden;
+  position: fixed;
+  top: 50%;
+  left: 0;
+  z-index: 1001;
+  background: #FAFAFA;
+  margin: -150px 50rpx 0 50rpx;
+  border-radius: 3px;
+}
+ 
+.drawer_title{
+  padding:15px;
+  font: 20px "microsoft yahei";
+  text-align: center;
+}
+.drawer_content {
+  height: 120px;
+  overflow-y: scroll; /*超出父盒子高度可滚动*/
+}
+ 
+.btn_ok{
+ padding:15px;
+font:17px "microsoft yahei";
+text-align:center;
+border-top:1px solid #E8E8EA;
+color:#3399FF;
+
+}
+ 
+.top{
+	padding-top:8px;
+}
+.bottom {
+	padding-bottom:8px;
+}
+.title {
+	height: 30px;
+	line-height: 30px;
+	width: 160rpx;
+	text-align: center;
+	display: inline-block;
+	font: 300 28rpx/30px "microsoft yahei";
+}
+ 
+.input_base {
+	border: 2rpx solid #ccc;
+	padding-left: 10rpx;
+	margin-right: 50rpx;
+}
+.input_h30{
+	height: 30px;
+	line-height: 30px;
+}
+.input_h60{
+	height: 60px;
+}
+.input_view{
+	font: 12px "microsoft yahei";
+	background: #fff;
+	color:#000;
+	line-height: 30px;
+}
+ 
+
+.grid { display: -webkit-box; display: box; }
+.col-0 {-webkit-box-flex:0;box-flex:0;}
+.col-1 {-webkit-box-flex:1;box-flex:1;}
+.fl { float: left;}
+.fr { float: right;}
+.calculate{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: solid 1rpx #AEAEAE;
+  border-radius:20rpx;
+  width: 340rpx; 
+  margin: 40rpx auto
+
+}
+.subtract{
+  width: 120rpx;
+  height: 100rpx;
+  line-height: 100rpx;
+  text-align: center;
+  font-weight: bold;
+  color: #797979;
+
+}
+.add{
+  width: 120rpx;
+  height: 100rpx;
+   line-height: 100rpx;
+  text-align: center;
+   font-weight: bold;
+    color: #797979;
+
+}
+.calculate_text{
+  width: 100rpx;
+   border-left: solid 1rpx #AEAEAE;
+   border-right: solid 1rpx #AEAEAE;
+   text-align: center;
+   height: 100rpx;
+    line-height: 100rpx;
+}
+.tip{
+  text-align: center;
+  color: #868686;
+  font-size: 26rpx;
+}
+
+/* 弹窗 */
 .titles{
   background: #fff;
   padding: 25rpx; 
