--- a/pages/members/members.wxml
+++ b/pages/members/members.wxml
@@ -1,7 +1,7 @@
 <!--pages/members/members.wxml-->
 <view class='all'>
  <swiper current="{{tab}}" class="swiper-box" duration="300"  bindchange="tab_slide" catchtouchmove="stopTouchMove">
-    <swiper-item  wx:for="{{level}}">
+    <swiper-item  wx:for="{{level}}" catchtouchmove='catchTouchMove'>
             <view class='card' style='background:{{item.member_background_color}}'>  
                 <view class='card_a'>
                   <view class='img_cir'>
