--- a/pages/mine/mine.wxml
+++ b/pages/mine/mine.wxml
@@ -39,7 +39,10 @@
     </view>
     </view>
   <view class='order'>
-     <view class='order_title'>我的订单</view>
+     <view class='order_title'>
+      <view class="order_title_content">我的订单</view>
+      <view class="order_title_more" bindtap="go_order"> 查看全部订单></view>
+      </view>
      <view class='order_content'>
      <view wx:for="{{order_nav}}" class='nav_list'>
        <view class='nav_img'><image src='{{item.src}}'></image></view>
