--- a/pages/goods_detail/goods_detail.wxml
+++ b/pages/goods_detail/goods_detail.wxml
@@ -1,3 +1,4 @@
+<import src="../../wxParse/wxParse.wxml"/>
 <view class='all'>
 	<view class='mask' wx:if="{{mask_show}}">
 		<view class='select-ser-pop'>
@@ -20,21 +21,21 @@
 				</view>
 			</view>
 			<view class='spec-wrap'>
-				<view class='spec-box' wx:for="{{specifications}}">
-					<view class='spec_title'> {{item.specifications_name}}</view>
+				<view class='spec-box'>
+					<view class='spec_title'>选择规格</view>
 					<view class='spec_content_all'>
-						<view class='spec_content' wx:for="{{item.specifications_num}}">
-							<view class='spec_content_text'>{{item}}</view>
+						<view class='spec_content' wx:for="{{specifications_num}}">
+							<view  class="spec_content_text {{item.tab==tab? 'on' : ''}}"  bindtap="labelItemTap"  data-current="{{item.tab}}"> {{item.name}}  </view>
 						</view>
 					</view>
 				</view>
 				<view class='select-quantity'>
 					<view class='select-quantity_text'>购买数量</view>
 					<view class='select_calculator_num'>
-						<view class="select-minus">-</view>
-						<view class='select-calculator_val'><input type='number' value='1'></input>
+						<view class="select-minus" bindtap="bindMinus">-</view>
+						<view class='select-calculator_val'><input type='number'  value='{{num}}'></input>
 						</view>
-						<view class="select-increase">+</view>
+						<view class="select-increase" bindtap="bindPlus">+</view>
 					</view>
 				</view>
 			</view>
@@ -90,7 +91,9 @@
 				<view class="{{selected1?'red':'default'}}" bindtap="selected1">评价</view>
 			</view>
 		</view>
-		<view class="{{selected?'show':'hidden'}}">for system</view>
+		<view class="{{selected?'show':'hidden'}}">
+		<template is="wxParse" data="{{wxParseData:article.nodes}}"/>
+		</view>
 		<view class="{{selected1?'show':'hidden'}}">
 			<view class='comment'>
 				<view class='comment_list'>
