--- a/pages/goods_detail/goods_detail.wxss
+++ b/pages/goods_detail/goods_detail.wxss
@@ -1,16 +1,20 @@
 /* 轮播图 */
-	
+
+	view{
+    overflow:visible;
+
+  }
 	.all {
 		background: #F2F2F2;
     margin-bottom: 100rpx;
 	}
 	
 	.home_banner {
-		height: 526rpx;
+		height: 750rpx;
 	}
 	
 	swiper {
-		height: 526rpx;
+		height: 750rpx;
 	}
 	
 	.text {
@@ -138,7 +142,7 @@
 	
 	.red {
     line-height: 92rpx;
-	 color:red;
+	  color:red;
     font-weight:bold;
     font-size:28rpx;
     width:141rpx;
@@ -146,7 +150,7 @@
     border-bottom: solid 3px red;
 
 	}
-	
+
 	.show {
 	}
 	
@@ -249,22 +253,28 @@
     bottom: 0;
     background: #fff;
   }
+  .swiper-item{
+    width: 750rpx;
+    height: 8850rpx;
+  }
   .close-select-pop{
-    
-    position: absolute;
-    right: 10rpx;
-    top: 10rpx;
-    width: 16rpx;
+    position:absolute;
+    right:6rpx;
+    top:6rpx;
+    width:42rpx;
+    z-index: 999999;
   }
   .select-goods-img{
     width: 260rpx;
-    position: fixed;
-    top: 240rpx;
+    position: absolute;
+    top: -100rpx;
     left: 30rpx;
     z-index: 999999;
   }
   .select-goods-wrap{
+    position: relative;
     padding-bottom: 50rpx;
+    height:150rpx;
     border-bottom: solid 1px #EBEBEB;
   }
   .select-goods-info{
@@ -310,21 +320,25 @@ padding:0 16rpx;
     margin-bottom: 20rpx;
   }
   .spec_content{
-    flex-basis:25%;
      line-height: 50rpx;
      box-sizing: border-box;
     padding: 10rpx;
     
   }
   .spec_content_text{
-     background: #E4E4E4;
-
-    
+    display:flex;
+    align-items: center;
+    justify-content: center;
     text-align: center;
     border-radius:10rpx; 
-    font-size: 24rpx;
-    color: #333;
+    font-size: 26rpx;
+    padding: 12rpx 24rpx;
+    background: #949494;
+    color: #555;
+    background-color: #f5f5f5;
+    
   }
+
   .select{
       color: #fff;
       background: red;
@@ -334,6 +348,7 @@ padding:0 16rpx;
     justify-content: space-between;
     padding: 20rpx;
     margin-top: 20rpx;
+    padding-bottom: 40rpx;
   }
   .select_calculator_num{
     border: solid #DCDCDC 1px;
@@ -353,11 +368,11 @@ padding:0 16rpx;
   }
   .select-minus{
     text-align: center;
-    width: 30rpx;
+    width: 60rpx;
   }
   .select-increase{
      text-align: center;
-    width: 30rpx;
+    width: 60rpx;
   }
   .select-quantity_text{
     font-size: 30rpx;
@@ -412,6 +427,11 @@ overflow:hidden;
 
 
 }
+.on{
+  background-color: #FF0036;
+  color: #fff;
+}
+
 .comment_name{
   display: inline-block;
 }
