--- a/pages/goods_detail/goods_detail.wxml
+++ b/pages/goods_detail/goods_detail.wxml
@@ -44,7 +44,7 @@
 		<swiper indicator-dots="{{indicatorDots}}" autoplay="{{autoplay}}" interval="{{interval}}" duration="{{duration}}" indicator-dots="{{indicatorDots}}" autoplay="{{autoplay}}" circular="{{circular}}">
 			<block wx:for="{{image}}" wx:key="{{index}}">
 				<swiper-item class='swiper-item'>
-					<image src="{{item}}" class="slide-image" />
+					<image src="{{url}}{{item}}" class="slide-image" />
 				</swiper-item>
 			</block>
 		</swiper>
