--- a/pages/select_address/select_address.wxml
+++ b/pages/select_address/select_address.wxml
@@ -1,21 +1,21 @@
 <!--pages/select_address/select_address.wxml-->
 <view class='all'>
-	<radio-group class="radio-group" bindchange="radioChange">
-		<view class='content_list' >
+	<radio-group class="radio-group" bindchange="radioChange" wx:if="{{address.length!=0}}">
+		<view class='content_list' wx:for='{{address}}'>
 			<view class='radio'>
-				<radio value="" color='#fff' />
+				<radio value="{{item.id}}" color='#fff' />
 			</view>
 			<view class='add_information'>
 				<view>
-					<text class='tel'>1858822282</text>
-					<text> 刘德华 </text>
+					<text class='tel'>{{item.harvester_phone_num}}</text>
+					<text> {{item.harvester}} </text>
 					<text> 收 </text>
 				</view>
 				<view class='address'>
-					北京市朝阳区天鹅湾小区5号楼3单元201北京市朝阳区天鹅湾小区5号楼3单元201
+					{{item.address_name}}{{item.harvester_real_address}}
 				</view>
 			</view>
-			<view class='add_ico'>
+			<view class='add_ico' data-id="{{item.id}}"  bindtap="go_change_address">
 				<image src='img/u9386.png'></image>
 			</view>
 		</view>
