--- a/pages/select_address/select_address.wxml
+++ b/pages/select_address/select_address.wxml
@@ -1,11 +1,11 @@
 <!--pages/select_address/select_address.wxml-->
 <view class='all'>
-	<radio-group class="radio-group" bindchange="radioChange" wx:if="{{address.length!=0}}">
+	<radio-group class="radio-group" bindchange="radioChange" wx:if="{{address.length!=0}}" >
 		<view class='content_list' wx:for='{{address}}'>
 			<view class='radio'>
 				<radio value="{{item.id}}" color='#fff' />
 			</view>
-			<view class='add_information'>
+			<view class='add_information' bindtap="{{is_select_address}}"  data-tel='{{item.harvester_phone_num}}' data-name='{{item.harvester}}' data-address='{{item.address_name}}{{item.harvester_real_address}}' name="aaa">
 				<view>
 					<text class='tel'>{{item.harvester_phone_num}}</text>
 					<text> {{item.harvester}} </text>
