--- a/pages/settlement/settlement.wxss
+++ b/pages/settlement/settlement.wxss
@@ -140,7 +140,7 @@ color:#3399FF;
 }
 .order-goods-img{
   background: #fff;
-  width: 278rpx;
+  width: 170rpx;
     height: 170rpx;
     margin: 14rpx;
 }
@@ -166,6 +166,7 @@ color:#3399FF;
   display: flex;
 }
 .order-info-box{
+  width: 570rpx;
   padding: 14rpx;
 }
 .unit-price-p{
@@ -296,5 +297,40 @@ color:#3399FF;
   margin-top: 30rpx;
   background: #fff;
 }
-
-
+/* 购买数量 */
+.quantity{
+  display: flex;
+  width: 750rpx;
+  justify-content: space-between;
+  align-items: center;
+  background: #fff;
+  padding: 20rpx;
+  box-sizing: border-box;
+}
+.purchase_quantity{
+  font-size: 30rpx;
+}
+.select_quantity{
+  display: flex;
+  align-items: center;
+}
+.num input{
+width: 60rpx;
+font-size: 30rpx;
+color: #333;
+text-align: center;
+}
+.subtract{
+  width: 50rpx;
+  height: 50rpx;
+  text-align: center;
+  line-height: 50rpx;
+  background: #F2F2F2;
+}
+.add{
+  width: 50rpx;
+  height: 50rpx;
+  text-align: center;
+  line-height: 50rpx;
+  background: #F2F2F2;
+}
