--- a/pages/buy/buy.wxml
+++ b/pages/buy/buy.wxml
@@ -12,16 +12,16 @@
          <view  wx:for='{{goodList}}'> 
          <view class='content_list'>
            <view class='radio' >
-              <checkbox  value="{{item.isbn}}"  color='#fff' checked="{{item.checked}}"/>
+              <checkbox  value="{{item.id}}"  color='#fff' checked="{{item.checked}}"/>
             </view>
             <view class='content_list_img' style='width:220rpx;'><image src='{{item.cover}}' mode='widthFix'></image></view>
             <view class='good_infors'>
-                <view class='good_name'>商品名称</view>
+                <view class='good_name'>{{item.goods_name}}</view>
                 <view class='good_infor'>{{item.desc}}                    </view>
                 <view class='good_price'>
                         <view class='price'>
                             <image src='img/u300.png' mode='widthFix' style='width:40rpx;'></image>
-                            <view class='text_red'>￥{{item.price}}</view>
+                            <view class='text_red'>￥{{item.money}}</view>
                         </view>     
                          <view class='good_num text_red'>×1</view>
                 </view>
@@ -31,7 +31,7 @@
                   <view class='purchase_quantity'>购买数量</view>
                 <view class='select_quantity'>
                   <view class='subtract' catchtap="bindMinus" data-id="{{item.tab}}">-</view>
-                        <view class='num'><input type="number" placeholder=""  value="{{item.num}}" /></view>
+                        <view class='num'><input type="number" placeholder=""  value="{{item.goods_unit}}" /></view>
                   <view class='add'  catchtap="bindPlus" data-id="{{item.tab}}">+</view>
                 </view>
               </view>	
