--- a/pages/buy/buy.wxml
+++ b/pages/buy/buy.wxml
@@ -14,7 +14,7 @@
            <view class='radio' >
               <checkbox  value="{{item.id}}"  color='#fff' checked="{{item.checked}}"/>
             </view>
-            <view class='content_list_img' style='width:220rpx;'><image src='{{item.cover}}' mode='widthFix'></image></view>
+            <view class='content_list_img' style='width:220rpx;'><image src='{{url}}{{item.goods_images}}' mode='widthFix'></image></view>
             <view class='good_infors'>
                 <view class='good_name'>{{item.goods_name}}</view>
                 <view class='good_infor'>{{item.desc}}                    </view>
