--- a/pages/buy/buy.wxml
+++ b/pages/buy/buy.wxml
@@ -88,7 +88,7 @@
            <view class='delect_btn'   bindtap="deleteList" data-ihdex='1'>删除</view>
         </view>
         <navigator url='../settlement/settlement'>
-          <view class='go_buy'>结算({{totalCount}})</view>
+          <view class='go_buy' bindtap="showPopup">结算({{totalCount}})</view>
         </navigator>
       </view>
 </view>
