--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -50,16 +50,17 @@
         <view class="weui-grid" wx:for="{{routers}}" wx:key="name">
                 <view class='weui-grid__bg'>
                     <view class="weui-grid__icon">
-                        <image src=" {{item.icon}}" mode="scaleToFill" />
+                        <image src="{{url}}{{item.goods_show_image}}" mode="scaleToFill" />
                     </view>
-                    <text class="weui-grid_name">{{item.name}}</text>
-                     <text class="weui-grid_kuchun">库存{{item.code}}片</text>
-                     <view class='selling_point'  >
-                     <text class="sell-list" wx:for="{{item.selling}}">{{item}}</text>
+                    <text class="weui-grid_name">{{item.goods_name}}</text>
+                     <text class="weui-grid_kuchun">库存123片</text>
+                     <view class='selling_point'>{{item.goods_selling}}
                      </view>
                      <view class='price'>
                           <view class='price_img'><image src='{{item.price_img}}'></image></view>
-                           <text class="price_text">{{item.name}}</text>
+                          
+                          <text class="price_text" wx:if="{{item.goods_standard==0}}">{{item.goods_new_money}}</text>
+                           <text class="price_text" wx:else>{{item.goods_new_money}}</text>
                            <text class="price_line">{{item.name}}</text>
                      </view>
 
