--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -15,6 +15,18 @@ line-height:71rpx;
 overflow:hidden;
 
 }
+
+.selling_point{
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 1;
+  overflow:hidden;
+  -webkit-box-orient: vertical;
+  line-height:42rpx;
+  margin:10rpx;
+  color: #949494;
+  font-size: 30rpx;
+}
 image {
   width: 100%;
   height: 100%;
